# storage/api-docs/api-docs.json
@@ -2984,7 +2984,37 @@
                 "operationId": "9241199f271a1b17f4c77104bb1ea3d2",
                 "responses": {
                     "200": {
-                        "description": "User's basic info"
+                        "description": "User's basic info",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean",
+                                            "example": true
+                                        },
+                                        "data": {
+                                            "properties": {
+                                                "first_name": {
+                                                    "type": "string",
+                                                    "example": "John"
+                                                },
+                                                "profile_image": {
+                                                    "type": "string",
+                                                    "example": "avatars/user-1.jpg"
+                                                },
+                                                "profile_image_url": {
+                                                    "type": "string",
+                                                    "example": "https://example.com/profile-image/media/avatars/user-1.jpg"
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
                     }
                 },
                 "security": [
@@ -3347,7 +3377,7 @@
                 "requestBody": {
                     "required": true,
                     "content": {
-                        "application/json": {
+                        "multipart/form-data": {
                             "schema": {
                                 "properties": {
                                     "name": {
@@ -3357,6 +3387,11 @@
                                     "phone": {
                                         "type": "string",
                                         "example": "+919876543210"
+                                    },
+                                    "profile_image": {
+                                        "description": "Profile image upload",
+                                        "type": "string",
+                                        "format": "binary"
                                     },
                                     "gender": {
                                         "type": "string",
